--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'pmd'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -37,9 +38,12 @@ dependencies {
 
     def room_version = "2.1.0"
     implementation "androidx.room:room-runtime:$room_version"
-    apply plugin: 'pmd'
-    apply plugin: 'kotlin-android'
-    apply plugin: 'kotlin-android-extensions'
-    apply plugin: 'kotlin-kapt'
+    implementation "androidx.room:room-ktx:$room_version"
+    //optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+    //optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+    //Test helpers
+    implementation "androidx.room:room-testing:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 }
